<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organize_closet"
        android:textSize="20sp"
        android:textColor="@color/purple_primary"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organize_closet_description"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/purple_text"
        android:layout_marginBottom="24dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnOrganizeAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organize_all_items"
        android:textColor="@color/purple_primary"
        android:layout_marginBottom="3dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@android:color/white"/>

    <Button
        android:id="@+id/btnOrganizeLeastWorn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organize_least_worn"
        android:textColor="@color/purple_primary"
        android:layout_marginBottom="3dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@android:color/white" />

    <Button
        android:id="@+id/btnViewDiscarded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_discarded_items"
        android:textColor="@color/purple_primary"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@android:color/white" />

    <Button
        android:id="@+id/btnCancelOrganize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:layout_marginBottom="3dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@color/purple_primary" />

</LinearLayout>