<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <Button
        android:id="@+id/btn_create_outfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_outfit"
        android:textColor="@color/purple_primary"
        android:layout_marginBottom="3dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@android:color/white"/>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_item"
        android:textColor="@color/purple_primary"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@android:color/white" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:layout_marginBottom="3dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:backgroundTint="@color/purple_primary" />

</LinearLayout>

